# cardintel

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_domain_schema.py
backend/app/: __init__.py  api.py  main.py  models.py  schemas.py
backend/app/api/: admin.py  auth.py  banks.py  cards.py  health.py  users.py
backend/app/core/: config.py  security.py
backend/app/database/: __init__.py  session.py
backend/app/models/: __init__.py  bank.py  base.py  card.py  policy.py  sync.py  user.py
backend/app/repositories/: __init__.py  bank_repository.py
backend/app/routers/: admin.py  auth.py  banks.py  cards.py  recommendations.py  router.py  users.py
backend/app/schemas/: __init__.py  bank.py  card.py  policy.py  recommendation.py  user.py
backend/app/services/: __init__.py  bank_service.py
backend/app/services/auth/: __init__.py
backend/app/services/cards/: __init__.py
backend/app/services/parser/: __init__.py
backend/app/services/policy/: __init__.py
backend/app/services/recommendation/: __init__.py
backend/app/services/sync/: __init__.py
backend/tests/: test_bank_repository.py  test_bank_service.py  test_health.py
docs/: database-schema-v1.md  product-scope-v1.md
frontend/: README.md  index.html  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
